sliders and buttons

--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
     <title>Vertical Slider | JavaScript </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <div class="slider-container">
+        <div class="left-slide"></div>
+        <div class="right-slide"></div>
 
+        <div class="action-button">
+            <button class="down-button">
+                <i class="fas fa-arrow-down"></i>
+            </button>
+            <button class="up-button">
+                <i class="fas fa-arrow-up"></i>
+            </button>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
