set up the 4 divs with picture details

--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
 <body>
     
     <div class="slider-container">
-        <div class="left-slide"></div>
+        <div class="left-slide">
+            <div style="background-color: lavender">
+                <h1>Lavender</h1>
+                <p>Fields in France</p>
+            </div>
+            <div style="background-color: grey">
+                <h1>Raven</h1>
+                <p>Raven flying above the snow</p>
+            </div>
+            <div style="background-color: snow">
+                <h1>Castle</h1>
+                <p>A castle nestled in the snowy mountains</p>
+            </div>
+            <div style="background-color: rgb(87, 42, 42)">
+                <h1>Snow Monkey</h1>
+                <p>A Snow Monkey hold's her baby</p>
+            </div>
+        </div>
         <div class="right-slide"></div>
 
         <div class="action-button">
