set up right panel

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
                 <p>A Snow Monkey hold's her baby</p>
             </div>
         </div>
-        <div class="right-slide"></div>
+        <div class="right-slide">
+            <div style="background-image: url(images/lavender.jpeg);"></div>
+            <div style="background-image: url(images/raven.jpeg);"></div>
+            <div style="background-image: url(images/snow-castle.jpeg);"></div>
+            <div style="background-image: url(images/snow-monkey.jpeg);"></div>
+        </div>
 
         <div class="action-button">
             <button class="down-button">
