fixed up some of the css. pictures now displaying

--- a/index.html
+++ b/index.html
@@ -9,8 +9,54 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+
     <div class="slider-container">
+        <div class="left-slide">
+            <div style="background-color: lavender">
+                <h1>Lavender</h1>
+                <p>Fields in France</p>
+            </div>
+            <div style="background-color: grey">
+                <h1>Raven</h1>
+                <p>Raven flying above the snow</p>
+            </div>
+            <div style="background-color: snow">
+                <h1>Castle</h1>
+                <p>A castle nestled in the snowy mountains</p>
+            </div>
+            <div style="background-color: rgb(87, 42, 42)">
+                <h1>Snow Monkey</h1>
+                <p>A Snow Monkey hold's her baby</p>
+            </div>
+        </div>
+        <div class="right-slide"></div>
+
+        <div class="action-button">
+            <button class="down-button">
+                <i class="fas fa-arrow-down"></i>
+            </button>
+            <button class="up-button">
+                <i class="fas fa-arrow-up"></i>
+            </button>
+        </div>
+    </div>
+
+    <div class="right-slide">
+        <div style="background-image: url(images/lavender.jpeg);"></div>
+        <div style="background-image: url(images/raven.jpeg);"></div>
+        <div style="background-image: url(images/snow-castle.jpeg);"></div>
+        <div style="background-image: url(images/snow-monkey.jpeg);"></div>
+    </div>
+
+    <script src="app.js"></script>
+</body>
+</html>
+
+
+
+
+    <!-- <div class="slider-container">
         <div class="left-slide">
             <div style="background-color: lavender">
                 <h1>Lavender</h1>
@@ -44,8 +90,4 @@
                 <i class="fas fa-arrow-up"></i>
             </button>
         </div>
-    </div>
-
-    <script src="app.js"></script>
-</body>
-</html>
+    </div> -->
