work in progress - errors

--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
                 <p>A Snow Monkey hold's her baby</p>
             </div>
         </div>
-        <div class="right-slide"></div>
 
-        <div class="action-button">
+        <div class="right-slide">
+                <div style="background-image: url(images/lavender.jpeg);"></div>
+                <div style="background-image: url(images/raven.jpeg);"></div>
+                <div style="background-image: url(images/snow-castle.jpeg);"></div>
+                <div style="background-image: url(images/snow-monkey.jpeg);"></div>
+        </div>
+
+        <div class="action-buttons">
             <button class="down-button">
                 <i class="fas fa-arrow-down"></i>
             </button>
@@ -42,19 +48,9 @@
         </div>
     </div>
 
-    <div class="right-slide">
-        <div style="background-image: url(images/lavender.jpeg);"></div>
-        <div style="background-image: url(images/raven.jpeg);"></div>
-        <div style="background-image: url(images/snow-castle.jpeg);"></div>
-        <div style="background-image: url(images/snow-monkey.jpeg);"></div>
-    </div>
-
     <script src="app.js"></script>
 </body>
 </html>
-
-
-
 
     <!-- <div class="slider-container">
         <div class="left-slide">
