--- a/index.html
+++ b/index.html
@@ -13,29 +13,30 @@
 
     <div class="slider-container">
         <div class="left-slide">
-            <div style="background-color: lavender">
+            <div style="background-color: rgb(148, 148, 255)">
                 <h1>Lavender</h1>
-                <p>Fields in France</p>
+                <p>fields in France</p>
             </div>
             <div style="background-color: grey">
                 <h1>Raven</h1>
-                <p>Raven flying above the snow</p>
+                <p>flying above the snow</p>
             </div>
             <div style="background-color: snow">
-                <h1>Castle</h1>
-                <p>A castle nestled in the snowy mountains</p>
+                <h1 class="castle">Castle</h1>
+                <p class="castle">nestled in the snowy mountains</p>
             </div>
-            <div style="background-color: rgb(87, 42, 42)">
-                <h1>Snow Monkey</h1>
-                <p>A Snow Monkey hold's her baby</p>
+            <div style="background-color: rgb(254, 244, 244)">
+                <h1 class="snow-monkey">Snow Monkey</h1>
+                <p class="snow-monkey">in a hot spring</p>
             </div>
         </div>
 
+        <!-- these pictures must be the exact opposite order as the descriptions above, otherwise it'll be out of sync -->
         <div class="right-slide">
-                <div style="background-image: url(images/lavender.jpeg);"></div>
-                <div style="background-image: url(images/raven.jpeg);"></div>
+                <div style="background-image: url(images/snow-monkey1.jpeg);"></div>
                 <div style="background-image: url(images/snow-castle.jpeg);"></div>
-                <div style="background-image: url(images/snow-monkey.jpeg);"></div>
+                <div style="background-image: url(images/raven.jpeg);"></div>
+                <div style="background-image: url(images/lavender.jpeg);"></div>                        
         </div>
 
         <div class="action-buttons">
@@ -51,39 +52,3 @@
     <script src="app.js"></script>
 </body>
 </html>
-
-    <!-- <div class="slider-container">
-        <div class="left-slide">
-            <div style="background-color: lavender">
-                <h1>Lavender</h1>
-                <p>Fields in France</p>
-            </div>
-            <div style="background-color: grey">
-                <h1>Raven</h1>
-                <p>Raven flying above the snow</p>
-            </div>
-            <div style="background-color: snow">
-                <h1>Castle</h1>
-                <p>A castle nestled in the snowy mountains</p>
-            </div>
-            <div style="background-color: rgb(87, 42, 42)">
-                <h1>Snow Monkey</h1>
-                <p>A Snow Monkey hold's her baby</p>
-            </div>
-        </div>
-        <div class="right-slide">
-            <div style="background-image: url(images/lavender.jpeg);"></div>
-            <div style="background-image: url(images/raven.jpeg);"></div>
-            <div style="background-image: url(images/snow-castle.jpeg);"></div>
-            <div style="background-image: url(images/snow-monkey.jpeg);"></div>
-        </div>
-
-        <div class="action-button">
-            <button class="down-button">
-                <i class="fas fa-arrow-down"></i>
-            </button>
-            <button class="up-button">
-                <i class="fas fa-arrow-up"></i>
-            </button>
-        </div>
-    </div> -->
